# unscramble

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs  main.rs
tests/: 0-&_2-0-intersect.dot  0-&_2-10-intersect.dot  0-&_2-2-intersect.dot  0-&_2-4-intersect.dot  0-&_2-7-intersect.dot  0-false_0-0-intersect.dot  0-true_0-0-intersect.dot  0-x_0-0-intersect.dot  0-y_0-0-intersect.dot  0-~_1-2-intersect.dot  0-~_1-3-intersect.dot  1-&_2-10-intersect.dot  1-&_2-11-intersect.dot  1-&_2-12-intersect.dot  1-&_2-14-intersect.dot  1-&_2-15-intersect.dot  1-&_2-6-intersect.dot  1-&_2-8-intersect.dot  cross-prod-simp.rs  cross-prod-vectorized.rs  cross-prod.py  cross-prod.rs  egg1.dot  egg2.dot  false_0-0-intersect.dot  foo.txt  gen_rules.py  getcell.rs  integers.rs  lambda.rs  prop-simple.rs  prop-xor-intersect.rs  prop-xor.rs  prop.rs  regex-simple.rs  three.dot  three_simp.dot  true_0-0-intersect.dot  two.dot  two_and_three.dot  (+8 more)
tests/intersect/: 0-&_2-0-intersect.dot  0-&_2-1-intersect.dot  0-&_2-14-intersect.dot  0-&_2-2-intersect.dot  0-&_2-3-intersect.dot  0-&_2-5-intersect.dot  0-&_2-7-intersect.dot  0-&_2-8-intersect.dot  0-&_2-9-intersect.dot  0-true_0-0-intersect.dot  0-y_0-0-intersect.dot  0-~_1-0-intersect.dot  0-~_1-2-intersect.dot  1-&_2-0-intersect.dot  1-&_2-1-intersect.dot  1-&_2-2-intersect.dot  1-&_2-3-intersect.dot  1-&_2-4-intersect.dot  1-&_2-5-intersect.dot  1-&_2-6-intersect.dot  1-~_1-1-intersect.dot  1-~_1-2-intersect.dot  2-~_1-0-intersect.dot
tests/regex/: emp-a-intersect.dot  simple-regex-a.dot  simple-regex.dot
