[package]
name = "unscramble"
version = "0.1.0"
authors = ["Josh Pollock <joshpoll@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.5.0"


[dev-dependencies]
env_logger = {version = "0.7", default-features = false}
